--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg-charts": "^5.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "rnpm": {
     "assets": [
